--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -20,10 +20,10 @@
                 <p><a href="products">PRODUCTS</a></p>
                 <p>ABOUT US</p>
                 <div class="icon-navbar">
-                    <img src="images/search-bar.svg">
-                    <a href="login-register"><img src="images/account.svg"></a>
-                    <a href="cart"><img src="images/shopping-cart.svg"></a>
-                    <img src="images/logout.svg">
+                    <img src="{{ assetsUrl("images/search-bar.svg") }}" alt="">
+                    <a href="login-register"><img src="{{ assetsUrl("images/account.svg") }}" alt=""></a>
+                    <a href="cart"><img src="{{ assetsUrl("images/shopping-cart.svg") }}" alt=""></a>
+                    <img src="{{ assetsUrl("images/logout.svg") }}" alt="">
                 </div>
             </div>
         </div>
