--- a/resources/views/products.edge
+++ b/resources/views/products.edge
@@ -36,7 +36,7 @@
                 </div>
                 <div class="update-stock-button-box">
                     <div class="update-stock-button">
-                        <img src="images/edit-logo.svg" alt="">
+                        <a href="update-stock"><img src="{{ assetsUrl("images/edit-logo.svg") }}" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -55,7 +55,7 @@
                 </div>
                 <div class="update-stock-button-box">
                     <div class="update-stock-button">
-                        <img src="images/edit-logo.svg" alt="">
+                        <a href="update-stock"><img src="{{ assetsUrl("images/edit-logo.svg") }}" alt=""></a>
                     </div>
                 </div>
             </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="update-stock-button-box">
                     <div class="update-stock-button">
-                        <img src="images/edit-logo.svg" alt="">
+                        <a href="update-stock"><img src="{{ assetsUrl("images/edit-logo.svg") }}" alt=""></a>
                     </div>
                 </div>
             </div>
