--- a/resources/views/detail.edge
+++ b/resources/views/detail.edge
@@ -32,7 +32,7 @@
                 <div class="sub-option">
                     <label for="color">Size</label>
                     <label for="Size">Color</label>
-                    <label for="Quantity">Color</label>
+                    <label for="Quantity">Quantity</label>
                 </div>
                 <div class="sub-option">
                     <select name="color" id="color">
