--- a/resources/views/update-stock.edge
+++ b/resources/views/update-stock.edge
@@ -37,7 +37,7 @@
                 <div class="sub-option">
                     <label for="color">Size</label>
                     <label for="Size">Color</label>
-                    <label for="Quantity">Color</label>
+                    <label for="Quantity">Quantity</label>
                 </div>
                 <form action="" method="post">
                     <div class="sub-option">
