--- a/resources/views/test.edge
+++ b/resources/views/test.edge
@@ -4,31 +4,35 @@
 @endsection
 @section('content')
 <div class="test">
-    <div class="test-copyright">
-        Copyright © 2007-2009 POPRENT.
+    <div class="form">
+        <div class="label">
+        <label for="Product-name">Produtc's name</label>
+        <input type="text" name="Product-name" id="Product-name">
     </div>
-</div>
-<div class="topic-option">
-    <label for="shipping">SHIPPING</label>
-    <label for="address">ADDRESS</label>
-    <label for="tel">TEL.</label>
-    <label for="payment">PAYMENT</label>
-</div>
-<div class="detail-option">
-    <select name="shipping" id="shipping">
-        <option value="ems">EMS</option>
-        <option value="register">REGISTER</option>
-        <option value="kerry">KERRY</option>
-        <option value="ninja">NINJA</option>
-    </select>
-    <p>146/1 m.9 xxxxxxxxxxxxxxxxxxxxxxx
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-        xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-    <p>0610571188</p>
-    <select name="payment" id="payment">
-        <option value="scb">SCB</option>
-        <option value="next">NEXT</option>
-        <option value="kbank">KBANK</option>
-    </select>
+    <div class="label">
+        <label for="price-day">Price/day</label>
+        <input type="number" name="price-day" id="price-day">
+    </div>
+    <div class="label">
+        <label for="Deposit">Deposit</label>
+        <input type="number" name="Deposit" id="Deposit">
+    </div>
+    <div class="label">
+        <label for="color">color</label>
+        <input type="text" name="Color" id="Color">
+    </div>
+    <div class="label">
+        <label for="size">Size</label>
+        <input type="text" name="Size" id="Size">
+    </div>
+    <div class="label">
+        <label for="quantity">Quantity</label>
+        <input type="number" name="Quantity" id="Quantity">
+    </div>
+    <div class="label">
+        <label for="description">description</label>
+        <input type="text" name="description" id="description">
+    </div>
+    </div>
 </div>
 @endsection
