Added min/max value.

--- a/resources/views/detail.edge
+++ b/resources/views/detail.edge
@@ -43,7 +43,7 @@
                         <option value="s">s</option>
                         <option value="ss">ss</option>
                     </select>
-                    <input type="number" value="1">
+                    <input type="number" value="1" min="1" max="{{}}">
                 </div>
             </div>
             <div class="add-buy-button">
@@ -92,7 +92,8 @@
                     </div>
                     <div class="review-box-alldetail">
                         <div class="review-box-name">Chubby</div>
-                        <div class="review-box-ratestar">                    <span class="fa fa-star checked"></span>
+                        <div class="review-box-ratestar">
+                            <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
                             <span class="fa fa-star checked"></span>
