--- a/resources/views/update-stock.edge
+++ b/resources/views/update-stock.edge
@@ -49,7 +49,7 @@
                             <option value="s">s</option>
                             <option value="ss">ss</option>
                         </select>
-                        <input type="number" value="1">
+                        <input type="number" value="1" min="1" max="{{}}">
                     </div>
                 </div>
                 <div class="update-button">
