--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -23,7 +23,7 @@
                     <img src="{{ assetsUrl("images/search-bar.svg") }}" alt="">
                     <a href="login-register"><img src="{{ assetsUrl("images/account.svg") }}" alt=""></a>
                     <a href="cart"><img src="{{ assetsUrl("images/shopping-cart.svg") }}" alt=""></a>
-                    <img src="{{ assetsUrl("images/logout.svg") }}" alt="">
+                    <img class="none" id="logout" src="{{ assetsUrl("images/logout.svg") }}" alt="">
                 </div>
             </div>
         </div>
