--- a/resources/views/test.edge
+++ b/resources/views/test.edge
@@ -4,35 +4,39 @@
 @endsection
 @section('content')
 <div class="test">
-    <div class="form" action="{{ route("/test") }}" method="post">
-        <div class="label">
-        <label for="Product-name">Produtc's name</label>
-        <input type="text" name="Product-name" id="Product-name">
-    </div>
-    <div class="label">
-        <label for="price-day">Price/day</label>
-        <input type="number" name="price-day" id="price-day">
-    </div>
-    <div class="label">
-        <label for="Deposit">Deposit</label>
-        <input type="number" name="Deposit" id="Deposit">
-    </div>
-    <div class="label">
-        <label for="color">color</label>
-        <input type="text" name="Color" id="Color">
-    </div>
-    <div class="label">
-        <label for="size">Size</label>
-        <input type="text" name="Size" id="Size">
-    </div>
-    <div class="label">
-        <label for="quantity">Quantity</label>
-        <input type="number" name="Quantity" id="Quantity">
-    </div>
-    <div class="label">
-        <label for="description">description</label>
-        <input type="text" name="description" id="description">
-    </div>
+    <div class="form">
+        <form action="{{ route("/wow") }}" method="POST">
+            {{ csrfField() }}
+            <div class="label">
+                <label for="Product-name">Produtc's name</label>
+                <input type="text" name="productname" id="Product-name">
+            </div>
+            <div class="label">
+                <label for="price-day">Price/day</label>
+                <input type="number" name="priceday" id="price-day">
+            </div>
+            <div class="label">
+                <label for="Deposit">Deposit</label>
+                <input type="number" name="deposit" id="Deposit">
+            </div>
+            <div class="label">
+                <label for="color">color</label>
+                <input type="text" name="color" id="Color">
+            </div>
+            <div class="label">
+                <label for="size">Size</label>
+                <input type="text" name="size" id="Size">
+            </div>
+            <div class="label">
+                <label for="quantity">Quantity</label>
+                <input type="number" name="quantity" id="Quantity">
+            </div>
+            <div class="label">
+                <label for="description">description</label>
+                <input type="text" name="description" id="description">
+            </div>
+            <button type="submit" value="submit">ไป!!!</button>
+    </form>
     </div>
 </div>
 @endsection
