make rating system trial.ver

--- a/resources/views/detail.edge
+++ b/resources/views/detail.edge
@@ -146,6 +146,14 @@
                 </div>
             </div>
             <div class="add-new-review">
+                <div class="add-new-ratestar-box">
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star checked"></span>
+                    <span class="fa fa-star"></span>
+                </div>
+                <input type="text" name="ratestar">
                 <button type="button">+ ADD NEW REVIEW</button>
             </div>
         </div>
@@ -156,4 +164,7 @@
         Copyright © 2007-2009 POPRENT.
     </div>
 </footer>
+{{--  <script src="js/detail.js"></script>  --}}
+{{script("js/detail")}}
+
 @endsection
