--- a/public/css/detail.css
+++ b/public/css/detail.css
@@ -130,8 +130,6 @@
 .description {
     width: 800px;
 }
-.review {
-}
 .sub-text-description {
     color: #5F5F5F;
     padding-top: 30px;
@@ -141,10 +139,14 @@
 }
 .fa {
     color: #e4dab1;
-    font-size: xx-large;
+    font-size: 200px;
+    cursor: pointer;
 }
 .checked {
     color: #FAD42D;
+}
+.unchecked {
+    color: #e4dab1;
 }
 .review-topic {
     display: flex;
@@ -192,7 +194,15 @@
     grid-column-start: 1;
     grid-column-end: 3;
     text-align: center;
+    border-top: rgb(190, 190, 190) solid 1px;
+    padding: 3rem;
+    color: #5F5F5F;
+    font-weight: bold;
+    letter-spacing: 2px;
+    display: flex;
+    margin: 5rem;
     margin-top: 100px;
+    justify-content: center;
 }
 .add-new-review button {
     outline: none;
@@ -202,4 +212,28 @@
     padding: 20px;
     border-radius: 10px;
     font-weight: bold;
+    margin-top: 3rem;
+}
+
+.add-new-review-box {
+    width: 70%;
+}
+.add-new-review p {
+    text-align: left;
+    margin-left: 4rem;
+}
+.add-new-review input {
+    margin: 0;
+    width: 80%;
+    border: none;
+    height: 15vh;
+    padding: 2rem;
+}
+.add-new-ratestar-box {
+    text-align: left;
+    padding-left: 4rem;
+    color: #5F5F5F;
+    font-weight: bold;
+    letter-spacing: 2px;
+    padding-left: 3rem;
 }
