--- a/public/css/shop.css
+++ b/public/css/shop.css
@@ -18,7 +18,9 @@
     padding-top: 2rem;
     padding-bottom: 1rem;
     padding-left: 10px;
+    border: none;
     border-bottom: #A5A5A5 solid 1px;
+    background-color: transparent;
     cursor: pointer;
 }
 .sidebar-text:hover {
@@ -51,6 +53,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     width: 200px; 
+    margin: auto;
 }
 .card:hover {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
