Changed element id accordingly.

--- a/resources/views/login-register.edge
+++ b/resources/views/login-register.edge
@@ -9,11 +9,11 @@
             {{ csrfField() }}
             <div class="inputbox">
                 <input type="text" name="username" id="login-username">
-                <label for="username" id="label__username">USERNAME</label>
+                <label for="login-username" id="label-login-username">USERNAME</label>
             </div>
             <div class="inputbox">
                 <input type="password" name="password" id="login-password">
-                <label for="password" id="label__password">PASSWORD</label>
+                <label for="login-password" id="label-login-password">PASSWORD</label>
             </div>
             <div class="submit-button">
                 <button type="submit" value="submit ">
@@ -31,19 +31,19 @@
             {{ csrfField() }}
             <div class="inputbox">
                 <input type="text" name="username" id="register-username">
-                <label for="username">USERNAME</label>
+                <label for="register-username" id="label-register-username">USERNAME</label>
             </div>
             <div class="inputbox">
-                <input type="text" name="email" id="register-name">
-                <label for="email">EMAIL</label>
+                <input type="email" name="email" id="register-email">
+                <label for="register-email" id="label-register-email">EMAIL</label>
             </div>
             <div class="inputbox">
                 <input type="password" name="password" id="register-password">
-                <label for="password">PASSWORD</label>
+                <label for="register-password" id="label-register-password">PASSWORD</label>
             </div>
             <div class="inputbox">
-                <input type="password" name="confirm-password" id="register-confirm-password ">
-                <label for="confirm-password">CONFIRM PASSWORD</label>
+                <input type="password" name="confirm-password" id="register-confirm-password">
+                <label for="register-confirm-password" id="label-register-confirm-password">CONFIRM PASSWORD</label>
             </div>
             <div class="submit-button">
                 <button type="submit" value="submit ">
