--- a/resources/views/shop.edge
+++ b/resources/views/shop.edge
@@ -5,112 +5,48 @@
 @section('content')
 <div class="cart-page">
     <div class="sidebar">
-        <div class="all-sidebar-text">
-            <div class="sidebar-text">
+        <form class="all-sidebar-text" method="post" action="{{ route("/shop") }}">
+            {{ csrfField() }}
+            <button class="sidebar-text" type="submit" value="custome" name="category">
                 CUSTOME
-            </div>
-            <div class="sidebar-text">
+            </button>
+            <button class="sidebar-text" type="submit" value="accessories" name="category">
                 ACCESSORIE
-            </div>
-            <div class="sidebar-text">
+            </button>
+            <button class="sidebar-text" type="submit" value="mypurchase" name="category">
                 MY PURCHASE
-            </div>
-            <div class="sidebar-text">
+            </button>
+            <button class="sidebar-text" type="submit" value="case" name="category">
                 CASE
-            </div>
-            <div class="sidebar-text">
+            </button>
+            <button class="sidebar-text" type="submit" value="bag" name="category">
                 BAG
-            </div>
-            <div class="sidebar-text">
+            </button>
+            <button class="sidebar-text" type="submit" value="toy" name="category">
                 TOY
-            </div>
-            <div class="sidebar-text">
+            </button>
+            <button class="sidebar-text" type="submit" value="itdevice" name="category">
                 IT Device
-            </div>
-        </div>
+            </button>
+        </form>
     </div>
         <div class="all-card">
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
-            <div class="card">
-                <a href="detail">
-                    <img src="images/categories-makeup.jpg" alt="">
-                    <div class="inside">
-                        <p style="color:#767676;font-weight:bold;">Orange lipstick</p>
-                        <p style="color:#9B3303;font-size:15px;">99.99 THB</p>
-                    </div>
-                </a>
-            </div>
+            @each(item in items)
+                <div class="card">
+                    <a href="detail">
+                        <img src={{ assetsUrl("images/" + item.thumbnail ) }} alt={{ item.name }}>
+                        <div class="inside">
+                            <p style="color:#767676;font-weight:bold;">{{ item.name }}</p>
+                            <p style="color:#9B3303;font-size:15px;">
+                            @each(tag in item.type)
+                                {{ tag.pricePday }}
+                            @endeach
+                            THB
+                            </p>
+                        </div>
+                    </a>
+                </div>
+            @endeach
         </div>
 </div>
 @endsection
