edit all cart page

--- a/resources/views/cart.edge
+++ b/resources/views/cart.edge
@@ -5,85 +5,79 @@
 @section('content')
 <div class="cart-page">
     <div class="cart-page-box">
-        <div class="bar-button">
-            <div class="bar-sub-botton stay">
-                <button type="button">TO PAY</button>
-            </div>
-            <div class="bar-sub-botton">
-                <button type="button">TO RECIEVE</button>
-            </div>
-            <div class="bar-sub-botton">
-                <button type="button">NOW RENTING</button>
-            </div>
-            <div class="bar-sub-botton">
-                <button type="button">COMPLETED</button>
+        <div class="bar-topic-box">
+            <div class="bar-topic">
+                <div class="bar-sub-botton">
+                </div>
+                <div class="bar-sub-botton">
+                    <button type="button">PRODUCT</button>
+                </div>
+                <div class="bar-sub-botton">
+                    <button type="button">AUQNTITY</button>
+                </div>
+                <div class="bar-sub-botton">
+                    <button type="button">DAYS</button>
+                </div>
+                <div class="bar-sub-botton">
+                    <button type="button">PRICE/DAY</button>
+                </div>
+                <div class="bar-sub-botton">
+                    <button type="button">DEPOSIT</button>
+                </div>
+                <div class="bar-sub-botton">
+                    <button type="button">TOTAL PRICE</button>
+                </div>
+                <div class="bar-sub-botton">
+                    <button type="button">ACTION</button>
+                </div>
             </div>
         </div>
         <div class="cart-product-box">
-            <div class="cart-product">
-                <div class="cart-product-img">
-                    <img src="images/categories-case.jpg" alt="">
-                </div>
-                <div class="cart-product-detail">
-                    <div class="cart-product-detail-text">
-                        <p style="font-weight:bold;font-size:x-large;">MONGMING CASE</p>
-                        <p style="">฿999</p>
-                        <p>STATUS : to pay</p>
-                        <p>PAY DUE DATE : xx/xx/xx</p>
-                    </div>
-                </div>
+            <div class="bar-product">
+            <img src="images/product9.jpg" alt="">
+            <div class="product-name">
+                <p style="font-weight: bold;">WOODDY MEMES</p>
+                <p style="margin:0;">Color : pink</p>
+                <p style="margin:0;">Size : 32</p>
             </div>
-            <div class="cart-product">
-                <div class="cart-product-img">
-                    <img src="images/categories-case.jpg" alt="">
-                </div>
-                <div class="cart-product-detail">
-                    <div class="cart-product-detail-text">
-                        <p style="font-weight:bold;font-size:x-large;">MONGMING CASE</p>
-                        <p style="">฿999</p>
-                        <p>STATUS : to pay</p>
-                        <p>PAY DUE DATE : xx/xx/xx</p>
-                    </div>
-                </div>
+            <p>x2</p>
+            <p>3</p>
+            <p>฿999.99</p>
+            <p>฿9999.99</p>
+            <p>฿15,999.93</p>
+            <div class="delete-button"><button>delete</button></div>
             </div>
-            <div class="cart-product">
-                <div class="cart-product-img">
-                    <img src="images/categories-case.jpg" alt="">
-                </div>
-                <div class="cart-product-detail">
-                    <div class="cart-product-detail-text">
-                        <p style="font-weight:bold;font-size:x-large;">MONGMING CASE</p>
-                        <p style="">฿999</p>
-                        <p>STATUS : to pay</p>
-                        <p>PAY DUE DATE : xx/xx/xx</p>
-                    </div>
-                </div>
+        </div>
+        <div class="cart-product-box">
+            <div class="bar-product">
+            <img src="images/product9.jpg" alt="">
+            <div class="product-name">
+                <p style="font-weight: bold;">WOODDY MEMES</p>
+                <p style="margin:0;">Color : pink</p>
+                <p style="margin:0;">Size : 32</p>
             </div>
-            <div class="cart-product">
-                <div class="cart-product-img">
-                    <img src="images/categories-case.jpg" alt="">
-                </div>
-                <div class="cart-product-detail">
-                    <div class="cart-product-detail-text">
-                        <p style="font-weight:bold;font-size:x-large;">MONGMING CASE</p>
-                        <p style="">฿999</p>
-                        <p>STATUS : to pay</p>
-                        <p>PAY DUE DATE : xx/xx/xx</p>
-                    </div>
-                </div>
+            <p>x2</p>
+            <p>3</p>
+            <p>฿999.99</p>
+            <p>฿9999.99</p>
+            <p>฿15,999.93</p>
+            <div class="delete-button"><button>delete</button></div>
             </div>
-            <div class="cart-product">
-                <div class="cart-product-img">
-                    <img src="images/categories-case.jpg" alt="">
-                </div>
-                <div class="cart-product-detail">
-                    <div class="cart-product-detail-text">
-                        <p style="font-weight:bold;font-size:x-large;">MONGMING CASE</p>
-                        <p style="">฿999</p>
-                        <p>STATUS : to pay</p>
-                        <p>PAY DUE DATE : xx/xx/xx</p>
-                    </div>
-                </div>
+        </div>
+        <div class="cart-product-box">
+            <div class="bar-product">
+            <img src="images/product9.jpg" alt="">
+            <div class="product-name">
+                <p style="font-weight: bold;">WOODDY MEMES</p>
+                <p style="margin:0;">Color : pink</p>
+                <p style="margin:0;">Size : 32</p>
+            </div>
+            <p>x2</p>
+            <p>3</p>
+            <p>฿999.99</p>
+            <p>฿9999.99</p>
+            <p>฿15,999.93</p>
+            <div class="delete-button"><button>delete</button></div>
             </div>
         </div>
     </div>
