--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,54 +1,54 @@
-.bar-button button {
-    border: solid 3px #FDDFA3;
-    background-color: white;
-    color: #FDDFA3;
+.bar-topic button {
+    border: none;
+    background-color: #FDDFA3;
+    color: white;
     border-radius: 20px;
-    font-size: 17px;
-    width: 170px;
-    height: 45px;
+    font-size: 13px;
+    width: 100px;
+    height: 40px;
     font-weight: 600;
-    margin: 20px;
+    margin: 20px 0px;
     letter-spacing: 1px;
     cursor: pointer;
-    outline: no;
-}
-.stay button{
-    background-color: #FDDFA3;
-    border: none;
-    color: white;
+    outline: none;
 }
 .cart-page {
     display: flex;
     justify-content: center;
+    padding-bottom: 10vh;
 }
-.cart-page-box {
+.bar-topic-box {
+    display: flex;
+    justify-content: center;
+}
+.bar-product img {
     width: 60%;
+    margin: auto;
 }
-.bar-button {
+.bar-topic {
     margin-top: 20vh;
     display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    height: fit-content;
+    grid-template-columns: 20% 20% 10% 10% 10% 10% 10% 10%;
+    width: 100%;
 }
-.cart-product {
-    padding: 50px;
+.bar-product {
     display: grid;
-    grid-template-columns: 30% 70%;
-    grid-column-gap: 100px;
-    margin-left: 100px;
-}
-.cart-product-img {
-    grid-column: 1;
-}
-.cart-product-img img {
-    border-radius: 20px;
-}
-.cart-product-detail {
-    grid-column: 2;
+    grid-template-columns: 20% 20% 10% 10% 10% 10% 10% 10%;
+    width: 100%;
     color: #5F5F5F;
-    display: flex;
-    align-items: center;
 }
-.cart-product-detail p {
-    margin: 10px;
+.bar-product-cart {
+    display: grid;
+    grid-template-columns: 30% 30% 10% 10% 10% 10%;
+    width: 100%;
+}
+.delete-button button {
+    width: fit-content;
+    height: fit-content;
+    padding:5px 10px;
+    margin-left: 20px;
+    margin-top: 10px;
+}
+.cart-product-box {
+    margin-top: 2rem;
 }
