--- a/resources/views/mainlayout.edge
+++ b/resources/views/mainlayout.edge
@@ -17,6 +17,7 @@
             <div class="all-nav">
                 <p><a href="/">HOME</a></p>
                 <p><a href="shop">SHOP</a></p>
+                <p><a href="purchase">PURCHASE</a></p>
                 <p><a href="products">PRODUCTS</a></p>
                 <p>ABOUT US</p>
                 <div class="icon-navbar">
